# small-llm-medical-flashcards-finetuning

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dataset.yaml  models.yaml  train.yaml
configs/sweeps/: llama1b_lora.yaml  smollm2_lora.yaml
notebooks/: dataset.ipynb  finetuning_metrics.ipynb  finetuning_trial.ipynb  stock_baseline_metrics.ipynb  stock_baseline_metrics_4bits.ipynb
outputs/baseline/: HuggingFaceTB__SmolLM2-1.7B-Instruct.csv  Qwen__Qwen3-1.7B.csv  leaderboard.csv  meta-llama__Llama-3.2-1B-Instruct.csv
outputs/baseline_4bits/: HuggingFaceTB__SmolLM2-1.7B-Instruct.csv  HuggingFaceTB__SmolLM3-3B.csv  Qwen__Qwen2.5-3B-Instruct.csv  Qwen__Qwen3-1.7B.csv  google__gemma-3-4b-it.csv  google__medgemma-1.5-4b-it.csv  leaderboard.csv  meta-llama__Llama-3.2-1B-Instruct.csv  meta-llama__Llama-3.2-3B-Instruct.csv
outputs/checkpoints/baseline/: HuggingFaceTB__SmolLM3-3B.csv  (+9 more)
outputs/finetuning_evaluation/: leaderboard.csv  leandrodevai__finetuning-trial_lr1e4_r16_meta-llama_Llama-3.2-1B-Instruct.csv  leandrodevai__finetuning-trial_lr2e4_r16_HuggingFaceTB_SmolLM2-1.7B-Instruct (1).csv  leandrodevai__finetuning-trial_lr2e4_r16_meta-llama_Llama-3.2-1B-Instruct.csv  leandrodevai__finetuning-trial_lr5e4_r16_meta-llama_Llama-3.2-1B-Instruct.csv  leandrodevai__finetuning-trial_lr5e5_r16_meta-llama_Llama-3.2-1B-Instruct.csv
scripts/: create_sweep.py  run_wandb_agent.ps1  run_wandb_agent.sh
src/medical_flashcards/: __init__.py  config.py  data.py  evaluate.py  metrics.py  models.py  prompts.py  train.py  wandb_utils.py
tests/: test_config.py  test_metrics.py
(+8 files in other folders)
