[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "small-llm-medical-flashcards-finetuning"
version = "0.1.0"
description = "LoRA fine-tuning, baseline evaluation, and error analysis of small instruction models on medical flashcards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "huggingface-hub>=1.17.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.3.0",
    "tqdm>=4.67.3",
    "trl[peft]==1.0.0",
    "wandb>=0.27.0",
]

[project.scripts]
medical-flashcards-baseline = "medical_flashcards.cli.baseline:main"
medical-flashcards-eval = "medical_flashcards.cli.evaluate:main"
medical-flashcards-sweep = "medical_flashcards.cli.sweep:main"
medical-flashcards-train = "medical_flashcards.cli.train:main"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
]
torchvision = [
  { index = "pytorch-cu126"},
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "scikit-learn>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
